add pymysql templates.

--- a/MySQL/user_params/userparameter_mysql.conf
+++ b/MySQL/user_params/userparameter_mysql.conf
@@ -1,1 +1,3 @@
 UserParameter=custom.mysql[*], /usr/local/zabbix/etc/zabbix_custom_scripts/mysql_perf_monitor.sh $1 $2 $3
+UserParameter=custom.pymysql[*], /usr/local/zabbix/etc/zabbix_custom_scripts/mysql_perf_monitor.py --host $1 --user $2 --passwd $3 --db $4 $5
+
